# ScorchedEarthConsole

./: CMakeLists.txt  HelperLib.cpp  HelperLib.h  LinearAlgebra.cpp  LinearAlgebra.h  README.md  ScorchedEarthConsole.cpp  ScorchedEarthConsole.exe.lnk  ScorchedEarthConsole.h  battleLog.txt.lnk  botNames.txt.lnk  setup.txt.lnk
